include/wtf.h

// #endregion

// #region Forward declarations

//! Forward declarations
typedef struct wtf_context wtf_context_t;
typedef struct wtf_server wtf_server_t;
// #endregion

// #region Enums

//! Execution profiles for performance optimization
typedef enum {
    WTF_EXECUTION_PROFILE_LOW_LATENCY = 0,     //! Optimized for minimal latency
    WTF_EXECUTION_PROFILE_MAX_THROUGHPUT = 1,  //! Optimized for maximum data throughput
    WTF_EXECUTION_PROFILE_REAL_TIME = 2,       //! Real-time processing priority
    WTF_EXECUTION_PROFILE_SCAVENGER = 3        //! Background processing priority
} wtf_execution_profile_t;
//! Result codes for all WebTransport operations
typedef enum {
    WTF_SUCCESS = 0,
    WTF_ERROR_INVALID_PARAMETER,
    WTF_ERROR_OUT_OF_MEMORY,
    WTF_ERROR_INTERNAL,
    WTF_ERROR_CONNECTION_ABORTED,
    WTF_ERROR_STREAM_ABORTED,
    WTF_ERROR_INVALID_STATE,
    WTF_ERROR_BUFFER_TOO_SMALL,
    WTF_ERROR_NOT_FOUND,
    WTF_ERROR_REJECTED,
    WTF_ERROR_TIMEOUT,
    WTF_ERROR_TLS_HANDSHAKE_FAILED,
    WTF_ERROR_PROTOCOL_VIOLATION,
    WTF_ERROR_FLOW_CONTROL
} wtf_result_t;
//! Logging levels for debugging and monitoring
typedef enum {
    WTF_LOG_LEVEL_TRACE = 0,     //! Most detailed messages, may contain sensitive data
    WTF_LOG_LEVEL_DEBUG = 1,     //! Interactive investigation during development
    WTF_LOG_LEVEL_INFO = 2,      //! General application flow information
    WTF_LOG_LEVEL_WARN = 3,      //! Abnormal or unexpected events
    WTF_LOG_LEVEL_ERROR = 4,     //! Current flow stopped due to failure
    WTF_LOG_LEVEL_CRITICAL = 5,  //! Unrecoverable application or system crash
    WTF_LOG_LEVEL_NONE = 6       //! Disable all logging
} wtf_log_level_t;
//! Server operational states
typedef enum {
    WTF_SERVER_STOPPED,    //! Server is not running
    WTF_SERVER_STARTING,   //! Server is initializing
    WTF_SERVER_LISTENING,  //! Server is accepting connections
    WTF_SERVER_STOPPING    //! Server is shutting down
} wtf_server_state_t;
// #endregion

// #region Callback Types

//! Connection validation callback
//! @param request incoming connection request details
//! @param user_context user-provided context data
//! @return decision to accept or reject the connection
typedef wtf_connection_decision_t (*wtf_connection_validator_t)(
    const wtf_connection_request_t* request, void* user_context);
//! Session event notification callback
//! @param event session event details
typedef void (*wtf_session_callback_t)(const wtf_session_event_t* event);
//! Logging callback
//! @param level log message severity level
//! @param component component that generated the log
//! @param file source file name
//! @param line source file line number
//! @param message formatted log message
//! @param user_context user provided context (see wtf_context_config_t::log_user_context)
typedef void (*wtf_log_callback_t)(wtf_log_level_t level, const char* component, const char* file,
                                   int line, const char* message, void* user_context);
typedef struct {
    wtf_certificate_type_t cert_type;  //! Type of certificate configuration

    // Union for different certificate data types
    union {
        // File-based certificates
        struct {
            const char* cert_path;  //! Path to certificate file
            const char* key_path;   //! Path to private key file
        } file;

        // Protected file-based certificates
        struct {
            const char* cert_path;  //! Path to certificate file
            const char* key_path;   //! Path to private key file
            const char* password;   //! Password for private key
        } protected_file;

        // Hash-based certificates (Windows/Schannel)
        struct {
            const char* thumbprint;  //! Hex string of certificate thumbprint
        } hash;

        // Store-based certificates (Windows/Schannel)
        struct {
            const char* thumbprint;  //! Hex string of certificate thumbprint
            const char* store_name;  //! Name of certificate store
        } hash_store;

        // PKCS#12/PFX certificates
        struct {
            const void* data;      //! PKCS#12 binary data
            size_t data_size;      //! Size of PKCS#12 data
            const char* password;  //! Optional password for PKCS#12
        } pkcs12;

        // Windows certificate context (opaque pointer)
        void* context;  //! Platform-specific certificate context
    } cert_data;

    const char* principal;     //! Principal name for certificate selection
    const char* ca_cert_file;  //! Optional CA certificate file path
} wtf_certificate_config_t;
//! Server configuration parameters
typedef struct {
    const char* host;                       //! Host address to bind to
    uint16_t port;                          //! Port number to listen on

    wtf_certificate_config_t* cert_config;  //! TLS certificate configuration

    // Session limits
    uint32_t max_sessions_per_connection;  //! Maximum sessions per connection
    uint32_t max_streams_per_session;      //! Maximum streams per session
    uint64_t max_data_per_session;         //! Maximum data per session

    // Timeouts
    uint32_t idle_timeout_ms;       //! Idle timeout in milliseconds
    uint32_t handshake_timeout_ms;  //! Handshake timeout in milliseconds

    // Features
    bool enable_0rtt;       //! Enable 0-RTT connections
    bool enable_migration;  //! Enable connection migration

    // Callbacks
    wtf_connection_validator_t connection_validator;  //! Connection validation callback
    wtf_session_callback_t session_callback;          //! Session event callback
    void* user_context;                               //! User context for callbacks
} wtf_server_config_t;
//! Library context configuration
typedef struct {
    wtf_log_level_t log_level;                  //! Global logging level
    wtf_log_callback_t log_callback;            //! Custom logging callback
    void* log_user_context;                     //! Context for log callback
    uint32_t worker_thread_count;               //! Number of worker threads
    bool enable_load_balancing;                 //! Enable load balancing
    bool disable_encryption;                    //! Disable encryption for testing
    wtf_execution_profile_t execution_profile;  //! Performance profile
} wtf_context_config_t;
//! Create a new WebTransport context
//! @param config context configuration parameters
//! @param context pointer to receive the created context
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_context_create(const wtf_context_config_t* config,
                                        wtf_context_t** context);
//! Destroy a WebTransport context and cleanup all resources
//! @param context context to destroy
WTF_API void wtf_context_destroy(wtf_context_t* context);
//! Set global log level for the context
//! @param context target context
//! @param level new logging level
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_context_set_log_level(wtf_context_t* context, wtf_log_level_t level);
//! Create a new WebTransport server
//! @param context parent context for the server
//! @param config server configuration parameters
//! @param server pointer to receive the created server
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_server_create(wtf_context_t* context, const wtf_server_config_t* config,
                                       wtf_server_t** server);
//! Start the server listening for connections
//! @param server server instance to start
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_server_start(wtf_server_t* server);
//! Stop the server gracefully
//! @param server server instance to stop
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_server_stop(wtf_server_t* server);
//! Get current server state
//! @param server target server instance
//! @return current operational state
WTF_API wtf_server_state_t wtf_server_get_state(wtf_server_t* server);
//! Destroy the server and free resources
//! @param server server instance to destroy
WTF_API void wtf_server_destroy(wtf_server_t* server);