java/src/com/structmap/webtransportfast/wtf_h.java


    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_context_create(const wtf_context_config_t *config, wtf_context_t **context)
     * }
     */
    public static int wtf_context_create(MemorySegment config, MemorySegment context) {
        var mh$ = wtf_context_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_context_create", config, context);
            }
            return (int)mh$.invokeExact(config, context);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_context_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_context_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wtf_context_destroy(wtf_context_t *context)
     * }
     */
    public static FunctionDescriptor wtf_context_destroy$descriptor() {
        return wtf_context_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wtf_context_destroy(wtf_context_t *context)
     * }
     */
    public static MethodHandle wtf_context_destroy$handle() {
        return wtf_context_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wtf_context_destroy(wtf_context_t *context)
     * }
     */
    public static MemorySegment wtf_context_destroy$address() {
        return wtf_context_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wtf_context_destroy(wtf_context_t *context)
     * }
     */
    public static void wtf_context_destroy(MemorySegment context) {
        var mh$ = wtf_context_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_context_destroy", context);
            }
            mh$.invokeExact(context);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_context_set_log_level {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_context_set_log_level");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_context_set_log_level(wtf_context_t *context, wtf_log_level_t level)
     * }
     */
    public static FunctionDescriptor wtf_context_set_log_level$descriptor() {
        return wtf_context_set_log_level.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_context_set_log_level(wtf_context_t *context, wtf_log_level_t level)
     * }
     */
    public static MethodHandle wtf_context_set_log_level$handle() {
        return wtf_context_set_log_level.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_context_set_log_level(wtf_context_t *context, wtf_log_level_t level)
     * }
     */
    public static MemorySegment wtf_context_set_log_level$address() {
        return wtf_context_set_log_level.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_context_set_log_level(wtf_context_t *context, wtf_log_level_t level)
     * }
     */
    public static int wtf_context_set_log_level(MemorySegment context, int level) {
        var mh$ = wtf_context_set_log_level.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_context_set_log_level", context, level);
            }
            return (int)mh$.invokeExact(context, level);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_server_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_POINTER,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_server_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_server_create(wtf_context_t *context, const wtf_server_config_t *config, wtf_server_t **server)
     * }
     */
    public static FunctionDescriptor wtf_server_create$descriptor() {
        return wtf_server_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_server_create(wtf_context_t *context, const wtf_server_config_t *config, wtf_server_t **server)
     * }
     */
    public static MethodHandle wtf_server_create$handle() {
        return wtf_server_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_server_create(wtf_context_t *context, const wtf_server_config_t *config, wtf_server_t **server)
     * }
     */
    public static MemorySegment wtf_server_create$address() {
        return wtf_server_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_server_create(wtf_context_t *context, const wtf_server_config_t *config, wtf_server_t **server)
     * }
     */
    public static int wtf_server_create(MemorySegment context, MemorySegment config, MemorySegment server) {
        var mh$ = wtf_server_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_server_create", context, config, server);
            }
            return (int)mh$.invokeExact(context, config, server);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_server_start {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_server_start");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_server_start(wtf_server_t *server)
     * }
     */
    public static FunctionDescriptor wtf_server_start$descriptor() {
        return wtf_server_start.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_server_start(wtf_server_t *server)
     * }
     */
    public static MethodHandle wtf_server_start$handle() {
        return wtf_server_start.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_server_start(wtf_server_t *server)
     * }
     */
    public static MemorySegment wtf_server_start$address() {
        return wtf_server_start.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_server_start(wtf_server_t *server)
     * }
     */
    public static int wtf_server_start(MemorySegment server) {
        var mh$ = wtf_server_start.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_server_start", server);
            }
            return (int)mh$.invokeExact(server);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_server_stop {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_server_stop");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_server_stop(wtf_server_t *server)
     * }
     */
    public static FunctionDescriptor wtf_server_stop$descriptor() {
        return wtf_server_stop.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_server_stop(wtf_server_t *server)
     * }
     */
    public static MethodHandle wtf_server_stop$handle() {
        return wtf_server_stop.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_server_stop(wtf_server_t *server)
     * }
     */
    public static MemorySegment wtf_server_stop$address() {
        return wtf_server_stop.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_server_stop(wtf_server_t *server)
     * }
     */
    public static int wtf_server_stop(MemorySegment server) {
        var mh$ = wtf_server_stop.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_server_stop", server);
            }
            return (int)mh$.invokeExact(server);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_server_get_state {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_server_get_state");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_server_state_t wtf_server_get_state(wtf_server_t *server)
     * }
     */
    public static FunctionDescriptor wtf_server_get_state$descriptor() {
        return wtf_server_get_state.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_server_state_t wtf_server_get_state(wtf_server_t *server)
     * }
     */
    public static MethodHandle wtf_server_get_state$handle() {
        return wtf_server_get_state.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_server_state_t wtf_server_get_state(wtf_server_t *server)
     * }
     */
    public static MemorySegment wtf_server_get_state$address() {
        return wtf_server_get_state.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_server_state_t wtf_server_get_state(wtf_server_t *server)
     * }
     */
    public static int wtf_server_get_state(MemorySegment server) {
        var mh$ = wtf_server_get_state.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_server_get_state", server);
            }
            return (int)mh$.invokeExact(server);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_server_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_server_destroy");
